demo001-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo001-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo001
spec:
  hosts:
    - "*"
  gateways:
    - demo001-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: demo001
            port:
              number: 8080
